--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   path_provider: ^0.4.0
   dots_indicator: ^0.0.5
   flutter_launcher_icons: ^0.7.2
-
+  flare_flutter: ^1.5.5
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
